# night-out

./: .gitignore  README.md
backend/: .env.example  Dockerfile  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  places.py  router.py  users.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  friendship.py  place.py  user.py  user_place.py
backend/app/schemas/: auth.py  place.py  user.py
backend/app/services/places/: foursquare.py  google.py  osm.py  providers.py  resolver.py
ios/NightOut/App/: MainTabView.swift  NightOutApp.swift
ios/NightOut/Core/Auth/: AuthManager.swift
ios/NightOut/Core/Models/: Place.swift  User.swift
ios/NightOut/Core/Network/: APIClient.swift  APIEndpoints.swift
ios/NightOut/Features/Auth/ViewModels/: AuthViewModel.swift
ios/NightOut/Features/Auth/Views/: LoginView.swift  RegisterView.swift
ios/NightOut/Features/Map/ViewModels/: MapViewModel.swift
ios/NightOut/Features/Map/Views/: MapView.swift
ios/NightOut/Features/Places/ViewModels/: PlaceDetailViewModel.swift  PlaceListViewModel.swift  PlaceSearchViewModel.swift
ios/NightOut/Features/Places/Views/: PlaceDetailView.swift  PlaceListView.swift  (+1 more)
web/: package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/app/(app)/: layout.tsx
web/app/(app)/map/: page.tsx
web/app/(app)/places/: page.tsx
web/app/(auth)/login/: page.tsx
web/app/(auth)/register/: page.tsx
web/components/: MapComponent.tsx  PlaceSearchModal.tsx
(+3 files in other folders)
